--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>ZC INVEST - Conseil Financier & Digital</title>
+<title>ZC INVEST LTD - Conseil Financier & Digital</title>
 <style>
     body { font-family: 'Open Sans', sans-serif; margin:0; background:white; color:#0a3d62;
            background: url('https://images.unsplash.com/photo-1603570410048-2fc07ef348d4?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80') no-repeat center center fixed;
@@ -36,7 +36,7 @@
 
 <header>
     <img src="logo-zcinvest.jpg" alt="ZC INVEST Logo"/>
-    <h1>ZC INVEST</h1>
+    <h1>ZC INVEST LTD </h1>
     <p>Finance • Transformation Digitale • Stratégie</p>
 </header>
 
@@ -52,7 +52,7 @@
     <div id="finance" class="panel">
         <h3>Ingénierie Financière</h3>
         <p>Structuration avancée de financements, optimisation des cash-flows, gestion des risques.</p>
-        <form action="mailto:contact.zcinvest@gmail.com" method="post" enctype="text/plain">
+        <form action="mailto:contact@zcinvest.co.uk" method="post" enctype="text/plain">
             <input type="text" name="name" placeholder="Nom & Prénom" required>
             <input type="email" name="email" placeholder="Email" required>
             <textarea name="message" placeholder="Décrivez votre besoin" rows="4" required></textarea>
@@ -62,7 +62,7 @@
     <div id="entreprise" class="panel">
         <h3>Finance d'Entreprise</h3>
         <p>Accompagnement stratégique, indicateurs de performance, plans financiers sur mesure.</p>
-        <form action="mailto:contact.zcinvest@gmail.com" method="post" enctype="text/plain">
+        <form action="mailto:contact@zcinvest.co.uk" method="post" enctype="text/plain">
             <input type="text" name="name" placeholder="Nom & Prénom" required>
             <input type="email" name="email" placeholder="Email" required>
             <textarea name="message" placeholder="Décrivez votre besoin" rows="4" required></textarea>
@@ -72,7 +72,7 @@
     <div id="digital" class="panel">
         <h3>Transformation Digitale</h3>
         <p>Audit digital, déploiement CRM/ERP, automatisation via IA & data analytics.</p>
-        <form action="mailto:contact.zcinvest@gmail.com" method="post" enctype="text/plain">
+        <form action="mailto:contact@zcinvest.co.uk" method="post" enctype="text/plain">
             <input type="text" name="name" placeholder="Nom & Prénom" required>
             <input type="email" name="email" placeholder="Email" required>
             <textarea name="message" placeholder="Décrivez votre besoin" rows="4" required></textarea>
@@ -82,7 +82,7 @@
     <div id="strategie" class="panel">
         <h3>Management & Stratégie</h3>
         <p>Conception et pilotage des feuilles de route stratégiques, conduite du changement.</p>
-        <form action="mailto:contact.zcinvest@gmail.com" method="post" enctype="text/plain">
+        <form action="mailto:contact@zcinvest.co.uk" method="post" enctype="text/plain">
             <input type="text" name="name" placeholder="Nom & Prénom" required>
             <input type="email" name="email" placeholder="Email" required>
             <textarea name="message" placeholder="Décrivez votre besoin" rows="4" required></textarea>
@@ -91,8 +91,8 @@
     </div>
     <div id="contact" class="panel">
         <h3>Contactez-nous</h3>
-        <p>Email : contact.zcinvest@gmail.com<br>Tél : +216 97 273 200</p>
-        <form action="mailto:contact.zcinvest@gmail.com" method="post" enctype="text/plain">
+        <p>Email : contact@zcinvest.co.uk <br>Tél :+44 7350 735592 </p>
+        <form action="mailto:contact@zcinvest.co.uk" method="post" enctype="text/plain">
             <input type="text" name="name" placeholder="Nom & Prénom" required>
             <input type="email" name="email" placeholder="Email" required>
             <textarea name="message" placeholder="Votre message" rows="4" required></textarea>
@@ -102,7 +102,7 @@
 </div>
 
 <footer>
-    <p>© 2025 ZC INVEST | contact.zcinvest@gmail.com | +216 97 273 200</p>
+    <p>© 2025 ZC INVEST LTD | contact@zcinvest.co.uk | +44 7350 735592</p>
 </footer>
 
 </body>
