--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 <title id="doc-title">ZC INVEST LTD — Conseil financier & stratégie</title>
 <link id="canonical" rel="canonical" href="https://your-domain.tld/"/>
 
