--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
   <section id="contact" class="panel">
     <h3 data-fr="Contactez-nous" data-en="Contact us">Contactez-nous</h3>
     <p class="muted">
-      <span>Email&nbsp;: contact@zcinvest.co.uk</span> •
+      <span>Email&nbsp;: hello@zcinvest.co.uk</span> •
       <span>Tél&nbsp;:&nbsp;+44 7350 735592</span>
     </p>
     <button class="btn primary" onclick="openModal('general','Contact')" data-fr="Demander un rendez-vous" data-en="Request a meeting">Demander un rendez-vous</button>
