--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 </main>
 
 <footer id="legal">
-  <p class="small">© 2025 ZC INVEST LTD • contact@zcinvest.co.uk • +44 7350 735592</p>
+  <p class="small">© 2025 ZC INVEST LTD • hello@zcinvest.co.uk • +44 7350 735592</p>
   <div class="small" style="margin-top:6px">
     <div>Registered in England & Wales — Company Number: 16632422 — Registered office: 71-75, Shelton Street, Covent Garden, London, WC2H 9JQ, UNITED KINGDOM</div>
   </div>
